Fixes invisible footer text

--- a/assets/source/sass/layout/_footer.scss
+++ b/assets/source/sass/layout/_footer.scss
@@ -1,5 +1,8 @@
 .main-footer .logotype {
     text-align: left;
+    span.h1 {
+        color: #fff;
+    }
 }
 
 .main-footer .icons-list {
